--- a/packages/core/examples/test/elements.html
+++ b/packages/core/examples/test/elements.html
@@ -108,13 +108,15 @@
           desc: {
             fontSize: 16,
             color: "#3f51b5",
-            text: "生活就像海洋，只有意志坚强的人，才能到达彼岸。",
+            text: "生活就像海洋",
             fontFamily: 'monospace',
             fontWeight: 'bold',
             borderRadius: 8,
             borderWidth: 2,
             borderColor: "#2196f3",
             bgColor: '#c6e0f5',
+            textAlign: 'right',
+            maxWidth: true
           },
         })
         core.addElement({
